# commanders

./: .gitignore  CMakeLists.txt  Doxyfile  corporate_wars.sln  corporate_wars.vcxproj  corporate_wars.vcxproj.filters  corporatewars  game_test  main.cpp  playerController.h  readme.md  timer_test  todo
Assets/sounds/: cw_sound.m4a
GUI/: gdb  sfml_app
GUI/source/: GUI.cpp  GUI.h  GUIControl.h  grid.cpp  main.cpp  test_main.cpp
GameLogic/: Generic_server_test.cpp  Ncurses_test.cpp  Socket_test.cpp  Socket_test_p2p.cpp  TCP_test_client.cpp  Test_main.cpp
GameLogic/include/: CLI_commander.hpp  Card.hpp  Card_generator.hpp  Card_mechanics.hpp  Client.hpp  Commander.hpp  Deck.hpp  Description_generator.hpp  Event_timer.hpp  Game_master.hpp  Misc_functions.hpp  NCurses_commander.hpp  Player.hpp  Proxy_commander.hpp  Roster.h  Server.hpp  Socket_wrapper.hpp  Socket_wrappers.hpp  Tile.hpp  gameLogic.h  game_logic.hpp  misc.h  networking.hpp  playerController.h  player_controller.hpp  roster.hpp  server.hpp
GameLogic/source/: CLI_client.cpp  CLI_commander.cpp  CLI_control.cpp  Card.cpp  CardAbilities.cpp  Card_abilities.cpp  Card_generator.cpp  Card_mechanics.cpp  Client.cpp  Commander.cpp  Deck.cpp  Description_generator.cpp  GameMaster.cpp  Game_master.cpp  Misc_functions.cpp  NCurses_commander.cpp  Player.cpp  Roster.cpp  Server.cpp  Socket_wrapper.cpp  Socket_wrappers.cpp  TCP_client.cpp  TCP_server.cpp  TerminalControl.cpp  Test_main.cpp  Tile.cpp  ncurses_control.cpp
UI/Window/: window.cpp
docs/html/: Ability_8hpp_source.html  Ability__logic_8hpp_source.html  Animations_8hpp_source.html  Application_8hpp_source.html  Archivist_8hpp_source.html  CLI__commander_8hpp_source.html  Card_8hpp_source.html  Card__index_8hpp_source.html  Client_8hpp_source.html  Commander_8hpp_source.html  Deck_8hpp_source.html  Description__generator_8hpp_source.html  Event__timer_8hpp_source.html  Focus_8hpp_source.html  Game__master_8hpp_source.html  Misc__functions_8hpp_source.html  NCurses__commander_8hpp_source.html  Network_8hpp_source.html  Player_8hpp_source.html  Proxy__commander_8hpp_source.html  Serialization_8hpp_source.html  Server_8hpp_source.html  Sprite__storage_8hpp_source.html  Storage__manager_8hpp_source.html  TCP__client_8hpp_source.html  TCP__server_8hpp_source.html  TUI_8hpp_source.html  Tile_8hpp_source.html  Timer_8hpp_source.html  UDP__peer_8hpp_source.html  Unique_8hpp_source.html  annotated.html  classAnimated-members.html  classAnimated.html  classApplication-members.html  classApplication.html  classArchivist-members.html  classArchivist.html  classBlinker-members.html  classBlinker.html  (+112 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_c.js  classes_d.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+13 more)
docs/latex/: Ability_8hpp_source.tex  Ability__logic_8hpp_source.tex  Animations_8hpp_source.tex  Application_8hpp_source.tex  Archivist_8hpp_source.tex  CLI__commander_8hpp_source.tex  Card_8hpp_source.tex  Card__index_8hpp_source.tex  Client_8hpp_source.tex  Commander_8hpp_source.tex  Deck_8hpp_source.tex  Description__generator_8hpp_source.tex  Event__timer_8hpp_source.tex  Focus_8hpp_source.tex  Game__master_8hpp_source.tex  Misc__functions_8hpp_source.tex  NCurses__commander_8hpp_source.tex  Network_8hpp_source.tex  Player_8hpp_source.tex  Proxy__commander_8hpp_source.tex  Serialization_8hpp_source.tex  Server_8hpp_source.tex  Sprite__storage_8hpp_source.tex  Storage__manager_8hpp_source.tex  TCP__client_8hpp_source.tex  TCP__server_8hpp_source.tex  TUI_8hpp_source.tex  Tile_8hpp_source.tex  Timer_8hpp_source.tex  UDP__peer_8hpp_source.tex  Unique_8hpp_source.tex  annotated.tex  classAnimated.eps  classAnimated.tex  classApplication.tex  classArchivist.tex  classBlinker.eps  classBlinker.tex  classCLI__commander.eps  classCLI__commander.tex  (+65 more)
gameLogic/: Card.cpp  CardRoster.h  Deck.cpp  GameMaster.cpp  Player.cpp  Roster.cpp  Roster.h  TerminalControl.cpp  Terminal_UI.cpp  Test_main.cpp  Tile.cpp  example.cpp  gameLogic.h  makefile  misc.h  moronic_text_ui.cpp  playerController.h  test.cpp
gameLogic/include/: Roster.h  gameLogic.h  misc.h
gameLogic/source/: Card.cpp  Roster.cpp  TerminalControl.cpp  Test_main.cpp
game_Interface/Main_window/: .gitignore  CMakeLists.txt  main_window.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
game_Interface/Window/: window.cpp
include/: GUI.h  gameLogic.h  misc.h  playerController.h
logic/gameplay/headers/: Ability.hpp  Ability_logic.hpp  Card.hpp  Card_index.hpp  Deck.hpp  Game_master.hpp  Player.hpp  Tile.hpp
logic/gameplay/source/: Ability.cpp  Card.cpp  Deck.cpp  Effects.cpp  Game_master.cpp  Player.cpp
logic/include/gameplay/: Ability.hpp  Card.hpp  Card_generator.hpp  Card_index.hpp  Deck.hpp  Game_master.hpp  Player.hpp  Tile.hpp
logic/include/interaction/: Client.hpp  Commander.hpp  Proxy_commander.hpp  Server.hpp
logic/include/interface/: Application.hpp  CLI_commander.hpp  Description_generator.hpp  Menus.hpp  NCurses_commander.hpp
logic/include/network/: Network.hpp  Serialization.hpp  Socket_wrappers.hpp  TCP_server.hpp  UDP_peer.hpp  UDP_wrapper.hpp
logic/include/utility/: Animations.hpp  Archivist.hpp  Event_timer.hpp  Focus.hpp  Misc_functions.hpp  Serialization.hpp  Sprite_storage.hpp  (+3 more)
main/: Game.cpp  Gameplay_test.cpp  Generic_client_test.cpp  Generic_server_test.cpp  Ncurses_test.cpp  Socket_test_p2p.cpp  Storage_test.cpp  TCP_test_client.cpp  TCP_test_server.cpp  TUI_test.cpp  Timer_test.cpp  Unimap_test.cpp  Unique_test.cpp
source/: CardAbilities.cpp  GUI.cpp  GameMaster.cpp  game_test.cpp  interf_test.cpp  test_main.cpp
sprites/: bricks  grass  logo  planks  stone  wood
(+76 files in other folders)
